style.css
/* Fonts */
@import url("https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Poppins:wght@200;300;400;500;600;700&display=swap");

/* Media quries 480px, 768px, 1024px, and 1280px*/
/* @media screen and (max-width: 480px) {}
@media screen and (max-width: 768px) {}
@media screen and (max-width: 1024) {}
@media screen and (max-width: 1280) {} */

/* Reset */
html {
  box-sizing: border-box;
  font-size: 100%;
}

*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: inherit;
}

body {
  font-family: "Poppins", sans-serif;
}

a,
a:active,
a:visited {
  text-decoration: none;
  cursor: pointer;
}

ul,
li {
  list-style-type: none;
}

/* --- VARAIBLES --- */

/* Colors */
:root {
  --black: #000000;
  --white: #ffffff;
  --grey: #4b4a4a;
  --yellow: #f8dd9f;
}

/* Spacing */
:root {
  /* side and top margins */
  --sec-pad-full: clamp(2rem, 10.5vw, 11.25rem);
  --sec-pad-half: clamp(2rem, 5.25vw, 5.625rem);
  --txt-pad-space: 6vw;
  --btn-pad-top-bottom: clamp(0.5rem, 1.25vw, 0.65rem);
  --btn-pad-sides: clamp(1rem, 2.5vw, 2rem);
  --btn-lg-pad-top-bottom: clamp(0.75rem, 1.5vw, 0.75rem);
  --btn-lg-pad-sides: clamp(1.25rem, 3vw, 2.5rem);
}

/* Font styles */

:root {
  /* headers */
  --h-lg: clamp(3rem, 5.5vw, 5rem) / 100% "DM Serif Display", sans-serif;
  --h-m: clamp(2rem, 4.5vw, 3.75rem) / 100% "DM Serif Display", sans-serif;
  --h-sm: clamp(1.5rem, 3vw, 2.175rem) / 100% "DM Serif Display", sans-serif;
  /* sub headers */
  --s-h: 600 clamp(1.25rem, 2vw, 1.5rem) / 100% "Poppins", sans-serif;
  --s-h-sm: 700 clamp(1rem, 1.5vw, 1.25rem) / 100% "Poppins", sans-serif;
  /* paragraph text */
  --p: 400 clamp(1rem, 1.5vw, 1.25rem) / 120% "Poppins", sans-serif;
  --p-sm: 400 clamp(0.8rem, 1.25vw, 1rem) / 120% "Poppins", sans-serif;
  --p-lg: 300 clamp(1.25rem, 2vw, 1.5rem) / 130% "Poppins", sans-serif;
  /* other */
  /* how to capitalize? */
  --nav-item: 400 clamp(1rem, 1vw, 1.125rem) "Poppins", sans-serif;
  --btn: 500 clamp(1rem, 1.25vw, 1rem) "Poppins", sans-serif;
  --btn-lg: 500 clamp(1rem, 1.5vw, 1.125rem) "Poppins", sans-serif;
  --input: 400 clamp(1rem, 1.5vw, 1.25rem) / 120% "Poppins", sans-serif;
}

/* Headers and paragraphs */

.h-lg {
  font: var(--h-lg);
  margin-bottom: 1.75rem;
}

.h-m {
  font: var(--h-m);
  margin-bottom: 1.5rem;
}

.h-sm {
  font: var(--h-sm);
  margin-bottom: 1.25rem;
}

.s-h {
  font: var(--s-h);
  margin-bottom: 1rem;
}

.s-h-sm {
  font: var(--s-h-sm);
  margin-bottom: 0.5rem;
}

.p {
  font: var(--p);
  margin-bottom: 1rem;
}

.p-sm {
  font: var(--p-sm);
  margin-bottom: 0.8rem;

  &.link {
    margin-bottom: 0.5rem;
    cursor: pointer;
  }
}

.p-lg {
  font: var(--p-lg);
  margin-bottom: 1.25rem;
}

.nav-item {
  font: var(--nav-item);
}

/* Text color and background color*/

.wh {
  color: var(--white);
}

.bg-wh {
  background-color: var(--white);
}

.bl {
  color: var(--black);
}

.bg-bl {
  background-color: var(--black);
}

.ye {
  color: var(--yellow);
}

.bg-ye {
  background-color: var(--yellow);
}

/* LAYOUT */

body {
  background-image: url("./assets/images/topbillede.jpg");
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: cover;
  backdrop-filter: blur(1px) brightness(70%);
  overflow: hidden;
}

.content {
  width: 100vw;
  height: 100vh;
  height: 100svh;
  overflow-y: scroll;
  scroll-behavior: smooth;
}

/* Header */
.header {
  position: sticky;
  top: 0;
  width: 100vw;
  max-width: 1600px;
  margin: 0 auto 0 auto;
  z-index: 1;
}

.main-menu {
  height: 12vh;
  min-height: 3.5rem;
  padding: 0 var(--sec-pad-full);
  @media screen and (max-width: 480px) {
    padding: 0 2rem;
  }
  display: flex;
  justify-content: space-between;
  gap: clamp(2rem, 6vw, 10rem);
  align-items: center;
  transition: height 0.3s ease;

  .logo {
    height: 100%;
    padding: 1rem 0;
    transition: padding 0.3s ease;
  }

  .header-nav-menu {
    flex: 1 1 auto;
    display: flex;
    justify-content: space-between;

    @media screen and (max-width: 767px) {
      display: none;
    }

    & .nav-item {
      color: var(--black);
      transition: all 0.2s;

      &:hover {
        transform: scale(1.1);
      }
    }
  }

  &.shrink {
    height: 6vh;

    .logo {
      padding: 0.25rem 0;
    }
  }
}

.burger-container {
  @media screen and (min-width: 768px) {
    display: none;
  }
  position: absolute;
  bottom: var(--sec-pad-full);
  right: var(--sec-pad-full);
  @media screen and (max-width: 480px) {
    bottom: 2rem;
    right: 2rem;
  }
  height: clamp(3rem, 10vw, 3.5rem);
  width: clamp(3rem, 10vw, 3.5rem);
  background-color: var(--white);
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  transition: all 0.3s;
  z-index: 1;

  &:hover {
    transform: scale(1.2);
  }

  .burger-menu-open,
  .burger-menu-close {
    width: 60%;
  }

  .hide-icon {
    display: none;
  }
}

.slider-menu {
  position: absolute;
  height: 98%;
  width: 95%;
  @media screen and (min-width: 480px) {
    height: 100%;
    width: 45vw;
  }
  border-radius: 0 0 3rem 0;
  background-color: var(--white);
  top: 0;
  left: 0;
  padding: var(--sec-pad-full);
  display: flex;
  justify-content: center;
  align-items: center;
  transition: all 0.3s;
  transform: translateX(-100vw);

  &.slide-in {
    transform: translateX(0vw);
  }

  .mobile-nav-menu {
    display: flex;
    flex-direction: column;
    justify-content: center;

    .mobile-nav-item {
      color: var(--black);
      font-size: clamp(2rem, 7vw, 2.5rem);
      line-height: 180%;
      transition: all 0.2s;

      &:hover {
        transform: scale(1.1);
      }
    }
  }
}

/* Main */
.main {
  max-width: 1600px;
  margin: 0 auto 0 auto;
}

.container {
  padding: var(--sec-pad-full);
  @media screen and (max-width: 480px) {
    padding: 2rem;
  }

  &.hero {
    height: 88vh;
    height: 88svh;
    background-image: url("./assets/images/topbillede.jpg");
    background-repeat: no-repeat;
    background-size: cover;
    display: flex;
    flex-direction: column;
    justify-content: center;

    .section-text {
      align-items: center;
    }

    .section-text p {
      width: 60%;

      @media screen and (max-width: 767px) {
        width: 100%;
      }
    }

    .section-text .btn-lg {
      margin-top: 1rem;
    }
  }

  &.center {
    text-align: center;

    .section-text {
      padding: 0 calc(2 * var(--txt-pad-space)) 0 calc(2 * var(--txt-pad-space));

      @media screen and (max-width: 480px) {
        padding: 0;
      }
    }
  }

  &.split {
    display: grid;
    grid-template-columns: 1fr 1fr;

    @media screen and (max-width: 1023px) {
      grid-template-columns: 1fr;
    }

    .section-text {
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: flex-start;
    }

    &.contact .section-text {
      justify-content: flex-start;
    }

    .section-image {
      align-self: center;
      width: 100%;
    }

    .section-text:first-child {
      padding-right: var(--txt-pad-space);
    }

    .section-text:last-child {
      padding-left: var(--txt-pad-space);
    }

    @media screen and (max-width: 1023px) {
      .section-text:first-child {
        padding-right: 0;
        padding-bottom: var(--txt-pad-space);
      }

      .section-text:last-child {
        padding-left: 0;
        padding-top: var(--txt-pad-space);
      }
    }
  }

  .section-text .btn {
    margin-top: 1rem;
  }
}

.multiple {
  width: 100%;
  display: flex;

  &.img-links {
    height: 40vw;

    @media screen and (max-width: 600px) {
      height: 150vw;
      flex-direction: column;
    }
  }

  .col {
    flex: 1;
  }
}

.img-link {
  position: relative;
  text-align: center;
  overflow: hidden;
  cursor: pointer;

  & img {
    width: 100%;
    height: auto;
    filter: saturate(100%);
    transition: all 0.2s ease-in-out;
  }

  & h1 {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%) scale(1);
    transition: all 0.2s ease-in-out;
  }

  &:hover {
    & img {
      filter: saturate(0%);
    }
    & h1 {
      transform: translate(-50%, -50%) scale(1.1);
    }
  }
}
/* Footer */

footer {
  max-width: 1600px;
  margin: 0 auto 0 auto;
}
.footer {
  padding: var(--sec-pad-half) var(--sec-pad-full) var(--sec-pad-half)
    var(--sec-pad-full);
  @media screen and (max-width: 480px) {
    padding-left: 2rem;
    padding-right: 2rem;
  }
  gap: 2vw;

  @media screen and (max-width: 767px) {
    flex-wrap: wrap-reverse;
    /* flex-direction: row; */
    column-gap: 0;
    row-gap: 4vw;

    .col {
      flex: 0 1 50%;
    }
  }
}

.social-links {
  margin-top: 2rem;

  & img {
    width: clamp(1.5rem, 3.5vw, 4rem);
    margin-right: 0.25rem;
    border-radius: 0.25rem;
    cursor: pointer;
  }
}

/* COMPONENTS */

.btn,
.btn-lg {
  border: none;
  border-radius: 0.5rem;
  padding: var(--btn-pad-top-bottom) var(--btn-pad-sides)
    var(--btn-pad-top-bottom) var(--btn-pad-sides);
  font: var(--btn);
  text-transform: uppercase;
  cursor: pointer;
  white-space: nowrap;

  &.bg-bl:hover {
    background: linear-gradient(
      110deg,
      rgba(0, 0, 0, 1) 25%,
      rgba(255, 255, 255, 1) 50%,
      rgba(0, 0, 0, 1) 75%
    );
    background-position: right;
    background-size: 400%;
    animation: flashbg 0.3s 1;
  }

  &.bg-wh:hover {
    background: linear-gradient(
      110deg,
      rgba(255, 255, 255, 1) 25%,
      rgba(0, 0, 0, 1) 50%,
      rgba(255, 255, 255, 1) 75%
    );
    background-position: right;
    background-size: 400%;
    animation: flashbg 0.2s 1;
  }
}

.btn-lg {
  font: var(--btn-lg);
  padding: var(--btn-lg-pad-top-bottom) var(--btn-lg-pad-sides)
    var(--btn-lg-pad-top-bottom) var(--btn-lg-pad-sides);
}

.form {
  width: 100%;
  display: flex;
  flex-direction: column;
  gap: 1rem;

  & input,
  textarea {
    font: var(--input);
    color: var(--grey);
    border: none;
    border-radius: 0.5rem;
    padding: 0.5rem;
    resize: vertical;
  }

  .btn {
    align-self: flex-end;
  }
}

/* ANIMATIONS */

/* Button flash */
@keyframes flashbg {
  to {
    background-position: left;
  }
}

